NV2D 1.4 integration for better deployment